force-app/main/default/objects/Claim_Submission__c/Claim_Submission__c.object-meta.xml
<CustomObject>
    <description>Auditable outbound professional claim submission attempt. PHI sharing is inherited from the parent superbill.</description>
    <label>Claim Submission</label>
    <nameField>
        <displayFormat>CLMSUB-{00000000}</displayFormat>
        <label>Claim Submission Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claim Submissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>