force-app/main/default/objects/Claim_Submission__c/fields/Acknowledgment_Message__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Message__c</fullName>
    <label>277CA Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>