force-app/main/default/objects/Claim_Submission__c/fields/Acknowledgment_Status__c.field-meta.xml
<CustomField>
    <fullName>Acknowledgment_Status__c</fullName>
    <label>277CA Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label
        >Pending</label></value>
            <value><fullName>Received</fullName><default>false</default><label
        >Received</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label
        >Accepted</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label
        >Rejected</label></value>
            <value><fullName>Unknown</fullName><default>false</default><label
        >Unknown</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>