force-app/main/default/objects/Claim_Submission__c/fields/Async_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Async_Job_Id__c</fullName>
    <label>Async Job ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>