force-app/main/default/objects/Claim_Submission__c/fields/Canonical_Payload__c.field-meta.xml
<CustomField>
    <fullName>Canonical_Payload__c</fullName>
    <description
  >Immutable canonical claim captured when this attempt was queued. Contains PHI; never returned to the submission panel.</description>
    <label>Frozen Canonical Claim</label><length>131072</length><type
  >LongTextArea</type><visibleLines>10</visibleLines>
</CustomField>