force-app/main/default/objects/Claim_Submission__c/fields/Clearinghouse_Claim_Id__c.field-meta.xml
<CustomField>
    <fullName>Clearinghouse_Claim_Id__c</fullName>
    <label>Clearinghouse Claim ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>