force-app/main/default/objects/Claim_Submission__c/fields/Last_Acknowledgment_At__c.field-meta.xml
<CustomField>
    <fullName>Last_Acknowledgment_At__c</fullName>
    <label>Last Acknowledgment At</label>
    <type>DateTime</type>
</CustomField>