force-app/main/default/objects/Claim_Submission__c/fields/Patient_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Patient_Control_Number__c</fullName>
    <externalId>true</externalId>
    <label>Patient Control Number</label>
    <length>17</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>