force-app/main/default/objects/Claim_Submission__c/fields/Payer_Claim_Control_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_Claim_Control_Number__c</fullName>
    <label>Payer Claim Control Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>