force-app/main/default/objects/Claim_Submission__c/fields/Provider_Status__c.field-meta.xml
<CustomField>
    <fullName>Provider_Status__c</fullName>
    <label>Provider Status</label>
    <length>80</length>
    <type>Text</type>
</CustomField>