force-app/main/default/objects/Claim_Submission__c/fields/Provider_Used__c.field-meta.xml
<CustomField>
    <fullName>Provider_Used__c</fullName>
    <label>Provider Used</label>
    <length>80</length>
    <type>Text</type>
</CustomField>