force-app/main/default/objects/Claim_Submission__c/fields/Queued_At__c.field-meta.xml
<CustomField>
    <fullName>Queued_At__c</fullName>
    <label>Queued At</label>
    <type>DateTime</type>
</CustomField>