force-app/main/default/objects/Claim_Submission__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>PHI sent to the clearinghouse. Access is restricted through claim permissions and parent sharing.</description>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>