force-app/main/default/objects/Claim_Submission__c/fields/Response_Payload__c.field-meta.xml
<CustomField>
    <fullName>Response_Payload__c</fullName>
    <description>Raw synchronous clearinghouse response. May contain PHI.</description>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>