force-app/main/default/objects/Claim_Submission__c/fields/Submission_Config__c.field-meta.xml
<CustomField>
    <fullName>Submission_Config__c</fullName>
    <description
  >Immutable nonsecret adapter configuration captured for deterministic transport retries. Credentials remain in Named Credentials.</description>
    <label>Frozen Submission Configuration</label><length>32768</length><type
  >LongTextArea</type><visibleLines>5</visibleLines>
</CustomField>