force-app/main/default/objects/Claim_Submission__c/fields/Superbill__c.field-meta.xml
<CustomField>
    <fullName>Superbill__c</fullName>
    <label>Superbill</label>
    <referenceTo>Superbill__c</referenceTo>
    <relationshipLabel>Claim Submissions</relationshipLabel>
    <relationshipName>Claim_Submissions</relationshipName>
    <type>MasterDetail</type>
</CustomField>