force-app/main/default/objects/Claim_Submission__c/listViews/Recent_Submissions.listView-meta.xml
<ListView>
    <fullName>Recent_Submissions</fullName>
    <columns>NAME</columns>
    <columns>Superbill__c</columns>
    <columns>Status__c</columns>
    <columns>Acknowledgment_Status__c</columns>
    <columns>Provider_Used__c</columns>
    <columns>Patient_Control_Number__c</columns>
    <columns>Submitted_At__c</columns>
    <columns>Last_Acknowledgment_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>Recent Submissions</label>
</ListView>